fixed general layout alignment

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,14 @@
   }
 
 /* ----------------------------------------
+About & Testimonials
+------------------------------------------- */
+.about-box, .testimonial-box, .contact-form {
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+/* ----------------------------------------
 Comment Form
 ------------------------------------------- */
 .main-wrapper {
